fixing_responsiveness_alignment

--- a/stylesheet/stylesheet-core.scss
+++ b/stylesheet/stylesheet-core.scss
@@ -110,6 +110,12 @@ header{
     justify-content: space-between;
     align-items: center;
     margin: 40px;
+
+    .login-cart{
+        display: flex;
+        align-items: center;
+    }
+
 }
 
 .main-nav ul{
@@ -133,6 +139,8 @@ header{
     display: none;
 }
 
+
+
 // BANNERS
 .image-container{
     height: 35vw;
@@ -148,11 +156,10 @@ header{
 .text-over-image{
     max-width: 50%;
     position: absolute;
-    bottom: 8px;
-    left: 40px;
-    background-color: rgba(245, 241, 237, 0.5);
+    bottom: 10%;
+    left: 5%;
+    background-color: rgba(245, 241, 237, 0.7);
     border-radius: 1em;
-    margin: 1em;
     padding: 1em;
 }
 
@@ -235,7 +242,7 @@ header{
     }
 }
 
-// FOOTER
+// // FOOTER
 footer section{
     display: flex;
     justify-content: space-around;
@@ -256,17 +263,33 @@ footer section{
     @include font-package();
     text-align: end;
     margin: 1em;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+
+    .social-media-icons{
+        display: flex;
+        align-items: center;
+        // justify-content: space-between;
+    }
+    
+    span{
+        @include font-package();
+        padding-left: 10;
+    }
+
+    .icon-wrapper{
+        padding-left: 10px;
+    }
 }
 
-span{
-    @include font-package();
-}
 
-// CARD
-.container {
+
+    // CARD
+    .container {
     position: relative;
     width: 50%;
-  }
+    }
   
   .overlay {
     position: absolute;
@@ -296,10 +319,21 @@ span{
     transform: translate(-50%, -50%);
     text-align: center;
 
-    p{
-        color: $background_color;
+        p{
+            color: $background_color;
+        }
     }
-  }
+
+@media (max-width: 1000px){
+    .text-over-image{
+        max-width: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-radius: 0;
+    }
+}
 
 @media (max-width: 765px){
     // MOBILE MENU
@@ -312,23 +346,6 @@ span{
         display: flex;
         padding: 10px;
     }
-
-    // BANNERS
-    .image-container{
-        display: flex;
-        flex-wrap: wrap;
-        position: static;
-    }
-    .text-over-image{
-        position: relative;
-        left: unset;
-        background-color: $main_color;
-        
-        p, h1{
-            color: $background_color;
-        }
-    }
-
     // NAV ICON
     #nav:checked + .nav-open {
         transform: rotate(45deg);
@@ -416,7 +433,7 @@ span{
 		color: $main_color;
 		font-size: 1.5em;
 		font-weight: 500;
-		transform: translateY(-20px);
+        transform: translateY(-20px);
 		transition: all 0.2s ease;
 	}
 	.nav-open {
@@ -477,6 +494,7 @@ span{
         flex-direction: column;
         align-items: flex-end;
     }
+
 }
 
 
